<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="accessibility_temp_minus">Decrease temperature</string>
    <string name="accessibility_temp_plus">Increase temperature</string>

    <string name="action_connect">Connect</string>
    <string name="action_history">History</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_schedule">Schedule</string>
    <string name="action_settings">Settings</string>

    <string name="app_name">My Home</string>

    <string name="desc_heater_status">Heater</string>
    <string name="desc_rh">Relative humidity</string>
    <string name="desc_target_control">Enable control</string>
    <string name="desc_target_temp">Target temperature</string>
    <string name="desc_welcome_home">Welcome home!</string>

    <string name="error_code_message">Error %d: %s</string>
    <string name="error_connection_failure">Connection failure</string>
    <string name="error_device_connecting">Please wait while the device connects</string>
    <string name="error_no_heater">Please refresh and try again</string>
    <string name="error_wifi_not_connected">WiFi is not connected</string>

    <string name="graph_yesterday">Yesterday</string>
    <string name="graph_days_ago">%d days ago</string>
    <string name="graph_today">Today</string>

    <string name="nav_app_version">v%s</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_title_dashboard">Dashboard</string>
    <string name="nav_title_sensors">Sensors</string>

    <string name="prefs_category_connection">Connection</string>
    <string name="prefs_category_graphs">Graphing</string>
    <string name="prefs_category_sensors">Sensors</string>
    <string name="prefs_title_data_url">Historical data URL</string>
    <string name="prefs_title_hub_url">Hub connection URL</string>
    <string name="prefs_title_show_extremes">Show minimum and maximum</string>
    <string name="prefs_title_show_limit_line">Show target temperature on graph</string>
    <string name="prefs_title_use_websocket">Connect using web socket</string>
    <string name="prefs_title_value_units">Sensor units</string>
    <string-array name="prefs_value_units_titles">
        <item>Celsius (°C)</item>
        <item>Fahrenheit (°F)</item>
    </string-array>
    <string-array name="prefs_value_units_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="state_auto">Auto</string>
    <string name="state_off">Off</string>
    <string name="state_off_auto">Off (Auto)</string>
    <string name="state_off_manual">Off (Manual)</string>
    <string name="state_on">On</string>
    <string name="state_on_auto">On (Auto)</string>
    <string name="state_on_manual">On (Manual)</string>

    <string name="ts_hour">Last updated over an hour ago</string>
    <string name="ts_less_than_minute">Last updated just now</string>
    <string name="ts_minutes">Last updated %s minutes ago</string>
    <string name="ts_one_minute">Last updated one minute ago</string>

    <string name="units_celsius">°C</string>
    <string name="units_fahrenheit">°F</string>
    <string name="dialog_setup_title">Configure your home</string>
    <string name="dialog_hint_hub_url">Hub LAN URL</string>
    <string name="dialog_hint_data_url">Historical Data URL</string>
    <string name="dialog_setup_desc">You can always change these later in settings</string>
</resources>
