<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefs_category_connection">
        <SwitchPreference
            android:defaultValue="true"
            android:enabled="false"
            android:title="@string/prefs_title_use_websocket" />
        <EditTextPreference
            android:key="hub_url"
            android:title="@string/prefs_title_hub_url" />
        <EditTextPreference
            android:key="data_url"
            android:title="@string/prefs_title_data_url" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_category_sensors">
        <ListPreference
            android:defaultValue="0"
            android:enabled="false"
            android:entries="@array/prefs_value_units_titles"
            android:entryValues="@array/prefs_value_units_values"
            android:key="value_units"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="%s"
            android:title="@string/prefs_title_value_units" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_category_graphs">
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_extremes"
            android:title="@string/prefs_title_show_extremes" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_limit_line"
            android:title="@string/prefs_title_show_limit_line" />
    </PreferenceCategory>
</PreferenceScreen>
