<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <TextView
        android:id="@+id/dialog_number_pick_title"
        style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_target_temp" />

    <RelativeLayout
        android:id="@+id/number_pick_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_number_pick_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dialog_button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_toStartOf="@+id/dialog_number_pick_value"
            android:layout_toLeftOf="@+id/dialog_number_pick_value"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/accessibility_temp_minus"
            android:focusable="true"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_minus" />

        <TextView
            android:id="@+id/dialog_number_pick_value"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="16dp"
            tools:text="21.3" />

        <ImageView
            android:id="@+id/dialog_button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@+id/dialog_number_pick_value"
            android:layout_toRightOf="@+id/dialog_number_pick_value"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/accessibility_temp_plus"
            android:focusable="true"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_plus" />

    </RelativeLayout>

    <Button
        android:id="@+id/dialog_button_ok"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/number_pick_layout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:text="@android:string/ok" />
</RelativeLayout>